youfull/objects/ALM_Rep_Performance_1__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALL_DOWNLN_CNT_WITH_REMV__c</fullName>
        <description>Contains the count of all the downlines of the sales leader including the removed representative. The removed Representatives to be included are those required by the market, because they could be reinstated or because they have had some activity in the campaign.</description>
        <inlineHelpText>Contains the count of all the downlines of the sales leader including the removed representative. The removed Representatives to be included are those required by the market, because they could be reinstated or because they have had some activity in the c</inlineHelpText>
        <label>ALL_DOWNLN_CNT_WITH_REMV</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALL_DWNLN_CNT__c</fullName>
        <label>All Generation Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALL_GEN_VOLM_AMT__c</fullName>
        <label>Downline Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_DISCNT_PCT__c</fullName>
        <label>Average Discount Rate [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_ACT_PCT__c</fullName>
        <label>Average Activity Rate [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_DISTR_SLS_PCT__c</fullName>
        <label>G1 Average Sales Distribution [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_QPA_CNT__c</fullName>
        <label>Average Qualified Personal Appointment R</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_RMVL_PCT__c</fullName>
        <label>Average Removal Rate [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_UNIT_COMM_PCT__c</fullName>
        <label>G1 Average Unit Commission Rates [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_DISTR_SLS_PCT__c</fullName>
        <label>G2 Average Sales Distribution [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_UNIT_COMM_PCT__c</fullName>
        <label>G2 Average Unit Commission Rates [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_DISTR_SLS_PCT__c</fullName>
        <description>Average of (award sales within 3rd generation / award sales within 3 generations) over last N campaigns</description>
        <label>G3 Average Sales Distribution [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_UNIT_COMM_PCT__c</fullName>
        <label>G3 Average Unit Commission Rates [%]</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SIZE_AMT__c</fullName>
        <label>Average Order Size</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVON_LOA_1_6_IND__c</fullName>
        <label>Avon LOA 1-6 Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionItem_Annv_Count__c</fullName>
        <label>ActionItem Anniv Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Birthday_Count__c</fullName>
        <label>ActionItem Birthday Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Cut_Off_Count__c</fullName>
        <label>Action Item Cutt Of Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAD_DEBT_AMT__c</fullName>
        <label>Bad Debt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAL_DUE_AMT__c</fullName>
        <label>Current Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BONUS_ERNGS_AMT__c</fullName>
        <label>Bonus Earning</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>Book 1 Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book 1 Team Unti Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_PRSNL_SLS_AMT__c</fullName>
        <label>B1 QV Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>Book2 Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book2 Team Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_PRSNL_SLS_AMT__c</fullName>
        <label>B2 QV Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRCHR_CNT__c</fullName>
        <label>Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNCH_NM2__c</fullName>
        <formula>BRNCH_NM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNCH_NM__c</fullName>
        <label>Branch</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNCH_SCTN_CD__c</fullName>
        <label>Branch Section</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDW_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if this Representative is Active as per CDW or not.</description>
        <inlineHelpText>Boolean indicating if this Representative is Active as per CDW or not.</inlineHelpText>
        <label>CDW Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHK_NRT_INVC_IS_ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHK_NRT_INVC_IS_ACTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHK_NRT_IS_ACTIVE_APPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHK_NRT_IS_ACTIVE_APPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHK_NRT_SBMTD_IS_ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHK_NRT_SBMTD_IS_ACTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTD_AWRD_SLS_AMT__c</fullName>
        <label>CTD QV Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURR_TITL_LVL_KEY__c</fullName>
        <label>Current Title</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipLabel>Curr_ALM Rep Performances</relationshipLabel>
        <relationshipName>Curr_ALM_Rep_Performances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CUST_CNT__c</fullName>
        <label>Customers Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DETL_CNTCT_MRKT4_TRN__c</fullName>
        <formula>MRKT_ACCT_KEY__r.DETL_CNTCT_MRKT_TXT4_TRN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DETL CNTCT MRKT4 TRN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWNLN_ONLY_IND__c</fullName>
        <description>new CDW (Y= Rep is only downline). Used to control the &apos;Name&apos; link to show the coaching record or perform the impersonation</description>
        <inlineHelpText>Y= Rep is only downline. Used to control the &apos;Name&apos; link to show the coaching record or perform the impersonation</inlineHelpText>
        <label>Downline Only Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERNGS_PD_AMT__c</fullName>
        <label>Paid Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_ERNGS_AMT__c</fullName>
        <label>Executive Earning</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_GEN_INDX__c</fullName>
        <label>Executive Generation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_RSNG_STR_IND__c</fullName>
        <label>Executive Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXEC_TITL_IND__c</fullName>
        <label>Executive Title Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXEC_UNIT_SLS__c</fullName>
        <label>Executive Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_VOLM_AMT__c</fullName>
        <label>Executive Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_1_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_1_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_1_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_1_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_2_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_2_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_3_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_3_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>No. of Executive Groups</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_2_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_2_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_2_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen 2 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_3_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_3_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_3_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen 2 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAP_AWD_SLS_AMT__c</fullName>
        <label>Super Hits Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAP_CNT__c</fullName>
        <label>Personal Super Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLD_SLS_CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRST_ORDER_DUE_DT__c</fullName>
        <label>First Order Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_AMT__c</fullName>
        <label>First Order Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_DT__c</fullName>
        <label>First Order Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_PD_DT__c</fullName>
        <label>First Order Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_PD__c</fullName>
        <formula>IF(FRST_ORDR_PD_DT__c = null, $Label.ZM_Formula_No,$Label.ZM_Formula_Yes)</formula>
        <label>First Order Paid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRST_ORD_REQ_DT__c</fullName>
        <label>First Order Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_ACTV_BASE_CNT__c</fullName>
        <label>G1_ACTV_BASE_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_BAL_AMT__c</fullName>
        <label>G1 Next Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_HOLD_ORDER_AMT__c</fullName>
        <label>Hold Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_NO_ORD_CNT__c</fullName>
        <label># G1 Inactive in Current Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_PAST_DUE_AMT__c</fullName>
        <label>G1 Amount Overdue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_POT_RMVD_REP_CNT__c</fullName>
        <label># G1 Potential Removals</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_UND_MOE_REP_CNT__c</fullName>
        <label># G1 w/ Personal Sales below Min. Order</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_LOA_0_6_REP_CNT__c</fullName>
        <label>G1_LOA_0_6_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_LOA_0_REP_CNT__c</fullName>
        <label>G1_LOA_0_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_G1_ACTV_REP_CNT__c</fullName>
        <description>Gap to Current or Next Title in G1 Active Count</description>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c), NULL, MAX((CURR_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c - GENTRTN_1_ACTV_REP_CNT__c),0) ),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_REP_RCRTMNTS_REQD_NR__c), NULL, MAX((CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_REP_RCRTMNTS_REQD_NR__c - GENTRTN_1_ACTV_REP_CNT__c),0) ) 
)</formula>
        <label>Gap in G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_G1_SLS_AMT__c</fullName>
        <description>Gap to Current or Next Title in G1 Sales</description>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.MIN_GEN_1_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.MIN_GEN_1_SLS_REQD_AMT__c - GENRTN_1_UNIT_SLS_AMT__c),0) ),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GEN_1_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GEN_1_SLS_REQD_AMT__c - GENRTN_1_UNIT_SLS_AMT__c),0) ) 
)</formula>
        <label>Gap in G1 Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_GRP_ACTV_REP_CNT__c</fullName>
        <description>Gap to Current or Next Title in G1-3 Active Count</description>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.MIN_GRP_ACTV_REP_CNT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.MIN_GRP_ACTV_REP_CNT__c - GRP_ACTV_REP_CNT__c),0) ),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GRP_ACTV_REP_CNT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GRP_ACTV_REP_CNT__c - GRP_ACTV_REP_CNT__c),0) ) 
)</formula>
        <label>Gap in G1-3 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_GRP_PAST_DUE_REP_CNT__c</fullName>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
IF( ISNULL(CURR_TITL_LVL_KEY__r.MAX_PAST_DUE_REP_CNT__c), NULL, MAX((GRP_PAST_DUE_REP_CNT__c - CURR_TITL_LVL_KEY__r.MAX_PAST_DUE_REP_CNT__c),0)),
IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MAX_PAST_DUE_REP_CNT__c), NULL, MAX((GRP_PAST_DUE_REP_CNT__c - CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MAX_PAST_DUE_REP_CNT__c),0) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap in Past Due Rep Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_GRP_SLS_AMT__c</fullName>
        <description>Gap to Current or Next Title in Group Sales</description>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c - MRKT_INVC_GRP_SLS_AMT__c),0) ),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GRP_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_GRP_SLS_REQD_AMT__c - MRKT_INVC_GRP_SLS_AMT__c),0) ) 
)</formula>
        <label>Gap in Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_PAST_DUE_PCT__c</fullName>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c), 
IF( ISNULL(CURR_TITL_LVL_KEY__r.MAX_PAST_DUE_PCT__c), NULL, MAX((PAST_DUE_PCT__c - CURR_TITL_LVL_KEY__r.MAX_PAST_DUE_REP_CNT__c),0)), 
IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MAX_PAST_DUE_PCT__c), NULL, MAX((PAST_DUE_PCT__c - CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MAX_PAST_DUE_PCT__c),0) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap in Past Due %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP_PRSNL_SLS_AMT__c</fullName>
        <description>Gap to Current or Next Title in Personal Sales</description>
        <formula>IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__c),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c - MRKT_INVC_SLS_AMT__c),0) ),
   IF( ISNULL(CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_PRSNL_SLS_REQD_AMT__c), NULL, MAX((CURR_TITL_LVL_KEY__r.LDRSHP_TITL_KEY_TO_CMPR__r.MIN_PRSNL_SLS_REQD_AMT__c - MRKT_INVC_SLS_AMT__c),0) ) 
)</formula>
        <label>Gap in Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_ACT_PCT__c</fullName>
        <label>G1 Activity</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_APPT_CNT__c</fullName>
        <label>G1 Appointments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_LDR_CNT_TXT__c</fullName>
        <label>G1 Leaders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CNT__c</fullName>
        <label>Gen 1 Qualfied Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CONVRSN_PCT__c</fullName>
        <formula>100 * (GENRTN_1_QPA_CNT__c / GENRTN_1_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Personal Appointment rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_RMVL_CNT__c</fullName>
        <label>G1 Removals</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_STF_CNT__c</fullName>
        <label>G1 Staff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_0_STF_CNT__c</fullName>
        <label>G1 Candidates Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_10_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 10 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_10_STF_CNT__c</fullName>
        <label>Gen 1 Title 10 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_11_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 11 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_11_STF_CNT__c</fullName>
        <label>Gen 1 Title 11 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_12_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 12 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>GENRTN_1_TITL_1_STF_CNT__c + GENRTN_1_TITL_2_STF_CNT__c + GENRTN_1_TITL_3_STF_CNT__c + GENRTN_1_TITL_4_STF_CNT__c + GENRTN_1_TITL_5_STF_CNT__c + GENRTN_1_TITL_6_STF_CNT__c + GENRTN_1_TITL_7_STF_CNT__c + GENRTN_1_TITL_8_STF_CNT__c + GENRTN_1_TITL_9_STF_CNT__c + GENRTN_1_TITL_10_STF_CNT__c + GENRTN_1_TITL_11_STF_CNT__c + GENRTN_1_TITL_12_STF_CNT__c + GENRTN_1_TITL_13_STF_CNT__c + GENRTN_1_TITL_14_STF_CNT__c
+GENRTN_1_TITL_15_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gen 1 Total Titled Leaders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>GENRTN_1_TOTAL_EXEC_TITL_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TOTAL_NEW_EXEC_TITL_STF_CNT__c</fullName>
        <label>Gen 1  Total New Executive Title Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_UNIT_SLS_AMT__c</fullName>
        <description>Sum of award sales minus returns for all G1 representatives of the Sales Leader. (these are the only fields in CDW that always deduct returns, all others are deducted in ALM as per market parameter)</description>
        <inlineHelpText>Sum of award sales minus returns for all G1 representatives of the Sales Leader.</inlineHelpText>
        <label>Total G1 Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_ACT_PCT__c</fullName>
        <label>GENRTN_2_ACT_PCT</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_APPT_CNT__c</fullName>
        <label>GENRTN_2_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_UNIT_SLS_AMT__c</fullName>
        <description>Sum of award sales minus returns for all G2 representatives of the Sales Leader. (these are the only fields in CDW that always deduct returns, all others are deducted in ALM as per market parameter)</description>
        <inlineHelpText>Sum of award sales minus returns for all G2 representatives of the Sales Leader.</inlineHelpText>
        <label>GENRTN_2_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_ACT_PCT__c</fullName>
        <label>GENRTN_3_ACT_PCT</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_APPT_CNT__c</fullName>
        <label>GENRTN_3_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_UNIT_SLS_AMT__c</fullName>
        <description>Sum of award sales minus returns for all G3 representatives of the Sales Leader. (these are the only fields in CDW that always deduct returns, all others are deducted in ALM as per market parameter)</description>
        <inlineHelpText>Sum of award sales minus returns for all G3 representatives of the Sales Leader.</inlineHelpText>
        <label>GENRTN_3_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <label>G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ORD_SBMTD_CNT__c</fullName>
        <label>Potential Active Representatives</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_2_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_2_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_3_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_3_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROUP_ABV_MOE_REP_CNT__c</fullName>
        <label>Team Reps above Minimum to Earn</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROUP_UND_MOE_REP_CNT__c</fullName>
        <label>Team Reps Under Minimum to Earn</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ABV_MOV_REP_CNT__c</fullName>
        <label>Team Reps above Minimum Order value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ACTV_REP_CNT__c</fullName>
        <formula>GENTRTN_1_ACTV_REP_CNT__c+GENTRTN_2_ACTV_REP_CNT__c+GENTRTN_3_ACTV_REP_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1-3 Actives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_APPT_CNT__c</fullName>
        <label>Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_AT_RISK_REP_CNT__c</fullName>
        <label>Team Reps At Risk!</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BAL_AMT__c</fullName>
        <label>Balance Due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BAL_REP_CNT__c</fullName>
        <label>Team Balance Rep Cnt</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <formula>GRP_INVCD_BLCKD_SLS_AMT__c + GRP_SUBMTD_BLCKD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BRCHR_CNT__c</fullName>
        <label>Team Brochure Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CUST_CNT__c</fullName>
        <label>Customers Served</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_FAP_AWD_SLS_AMT__c</fullName>
        <label>Super Hits Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_FAP_CNT__c</fullName>
        <label>Super Hits Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INHRTD_CNT__c</fullName>
        <label>Inherited Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVCD_BLCKD_SLS_AMT__c</fullName>
        <label>Total Invoiced Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVCD_SLS_AMT__c</fullName>
        <formula>GRP_INVC_AWRD_SLS_AMT__c +  GRP_INVC_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Award Sales minus Return Award Sales</inlineHelpText>
        <label>Total  Invoiced Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>